--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<div class="row">
 				<img src="http://pngimg.com/uploads/football/football_PNG1085.png" alt="pic">
 				<ul>
-					<li><a href="#">Link1</a></li>
-					<li><a href="#">Link2</a></li>
-					<li><a href="#">Link3</a></li>
-					<li><a href="#">Link4</a></li>
+					<li><a href="#">Test 1</a></li>
+					<li><a href="#">Test 2</a></li>
+					<li><a href="#">Test 3</a></li>
+					<li><a href="#">Test 4</a></li>
 				</ul>
 			</div>
 		</nav>
