--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<li><a href="#">Test 1a</a></li>
 					<li><a href="#">Test 2a</a></li>
 					<li><a href="#">Test 3a</a></li>
-					<li><a href="#">Test 4a</a></li>
+					<li><a href="#">Test 4b</a></li>
 				</ul>
 			</div>
 		</nav>
